[project]
name = "codex-workers-sdk-py"
version = "0.1.0"
description = "Codex Workflows Python Workers SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.60",
  "grpcio-tools>=1.60",
  "pydantic>=2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


