[project]
name = "workers-server"
version = "0.1.0"
description = "Workers Server - Executable worker server with examples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "workers-core",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
workers-server = "workers_server.main:main"


